--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         }
 
         label {
-            font-size: 30px;
             cursor: inherit;
+            color: red;
         }
 
         .heli {
@@ -57,7 +57,7 @@
 <body>
     <div id="container" >
     <h1 id="myH1">Hello, put in the user you want to hack below..</h1>
-    <label class="heli">Enter Username: </label>
+    <label style="font-size: 70px;" class="heli">Enter Username: </label>
     <input class="heli" id="myInput"> 
     <button class="heli" id="submit">Hack</button>
     </div>
